TWINS-189: [core] simplify twin and user count loading logic in services; refactor DomainBusinessAccountDTOMapper for efficiency